ordenar nav de principales

--- a/america/index.html
+++ b/america/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 
@@ -34,13 +34,13 @@
 
   <div class="menu" id="menu">
     <ul>
-      <li><a href="index.html">Presentación</a></li>
-      <li><a href="europa.html">Europa</a></li>
-      <li><a href="asia.html">Asia</a></li>
-      <li><a href="america.html">América</a></li>
-      <li><a href="oceania.html">Oceanía</a></li>
-      <li><a href="africa.html">África</a></li>
-      <li><a href="antartida.html">Antartida</a></li>
+      <li><a href="../index.html">Presentación</a></li>
+      <li><a href="../europa/index.html">Europa</a></li>
+      <li><a href="../asia/index.html">Asia</a></li>
+      <li><a href="index.html">América</a></li>
+      <li><a href="../oceania/index.html">Oceanía</a></li>
+      <li><a href="../africa/index.html">África</a></li>
+      <li><a href="../antartida/index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -53,7 +53,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url(img/NorteAmeriaca.jpg)">
+     style="background-image: url(../img/ameriaca.jpg)">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -174,7 +174,7 @@
 
               <!-- BOTÓN HONGOS (VERDE MUSGOSO + EFECTO) -->
               <div class="text-center mt-6">
-  <a href="SUBCARPETAS/americaf.html" class="btn-hongos">
+  <a href="sub/americaf.html" class="btn-hongos">
     Ver Hongos
   </a>
 </div>
@@ -198,11 +198,11 @@
           y puedes contactarnos desde los botones a la derecha
 
           <div class="absolute bottom-4 right-4 flex gap-3">
-            <a href="contacto.html"
+            <a href="../contacto.html"
                class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">
                CONTACTO
             </a>
-            <a href="formulario.html"
+            <a href="../formulario.html"
                class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">
                FORMULARIO
             </a>
@@ -215,6 +215,6 @@
 </footer>
 
 
-<script src="js/nav.js"></script>
+<script src="../js/nav.js"></script>
 </body>
 </html>
