--- a/antartida/index.html
+++ b/antartida/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="../css/index.css">
 
     <!-- NOTUS / ICONOS -->
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
@@ -39,13 +39,13 @@
 
   <div class="menu" id="menu">
    <ul>
-      <li><a href="index.html">Presentación</a></li>
-      <li><a href="europa.html">Europa</a></li>
-      <li><a href="asia.html">Asia</a></li>
-      <li><a href="america.html">América</a></li>
-      <li><a href="oceania.html">Oceanía</a></li>
-      <li><a href="africa.html">África</a></li>
-      <li><a href="antartida.html">Antartida</a></li>
+      <li><a href="../index.html">Presentación</a></li>
+      <li><a href="../europa/index.html">Europa</a></li>
+      <li><a href="../asia/index.html">Asia</a></li>
+      <li><a href="../america/index.html">América</a></li>
+      <li><a href="../oceania/index.html">Oceanía</a></li>
+      <li><a href="../africa/index.html">África</a></li>
+      <li><a href="index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -54,7 +54,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-         style="background-image: url(img/europa.jpg)">
+         style="background-image: url(../img/antartida.jpg)">
       <span class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -169,7 +169,7 @@ No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestr
 
               <!-- BOTÓN — AHORA DEBAJO Y CENTRADO -->
               <div class="text-center mt-6">
-  <a href="SUBCARPETAS/antartidaf.html" class="btn-hongos">
+  <a href="sub/antartidaf.html" class="btn-hongos">
     Ver Hongos
   </a>
 </div>
@@ -195,11 +195,11 @@ No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestr
         </div>
 
         <div class="absolute bottom-4 right-4 flex gap-3">
-          <a href="contacto.html"
+          <a href="../contacto.html"
              class="uppercase text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md rounded-full">
             CONTACTO
           </a>
-          <a href="formulario.html"
+          <a href="../formulario.html"
              class="uppercase text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md rounded-full">
             FORMULARIO
           </a>
@@ -210,7 +210,7 @@ No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestr
   </div>
 </footer>
 
-<script src="js/nav.js"></script>
+<script src="../js/nav.js"></script>
 
 </body>
 </html>
