--- a/europa/index.html
+++ b/europa/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -38,13 +38,13 @@
 
   <div class="menu" id="menu">
      <ul>
-      <li><a href="index.html">Presentación</a></li>
-      <li><a href="europa.html">Europa</a></li>
-      <li><a href="asia.html">Asia</a></li>
-      <li><a href="america.html">América</a></li>
-      <li><a href="oceania.html">Oceanía</a></li>
-      <li><a href="africa.html">África</a></li>
-      <li><a href="antartida.html">Antartida</a></li>
+      <li><a href="../index.html">Presentación</a></li>
+      <li><a href="index.html">Europa</a></li>
+      <li><a href="../asia/index.html">Asia</a></li>
+      <li><a href="../america/index.html">América</a></li>
+      <li><a href="../oceania/index.html">Oceanía</a></li>
+      <li><a href="../africa/index.html">África</a></li>
+      <li><a href="../antartida/index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -55,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url(img/europa.jpg)">
+     style="background-image: url(../img/europa.jpg)">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -154,7 +154,7 @@
 
               </p>
 <div class="text-center mt-6">
-  <a href="SUBCARPETAS/europaf.html" class="btn-hongos">
+  <a href="sub/europaf.html" class="btn-hongos">
     Ver Hongos
   </a>
 </div>
@@ -179,12 +179,12 @@
           y puedes contactarnos desde los botones a la derecha
 
           <div class="absolute bottom-4 right-4 flex gap-3">
-            <a href="contacto.html"
+            <a href="../contacto.html"
                class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg active:opacity-[0.85] rounded-full">
                CONTACTO
             </a>
 
-            <a href="formulario.html"
+            <a href="../formulario.html"
                class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg active:opacity-[0.85] rounded-full">
                FORMULARIO
             </a>
@@ -196,6 +196,6 @@
   </div>
 </footer>
 
-<script src="js/nav.js"></script>
+<script src="../js/nav.js"></script>
 </body>
 </html>
