--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
   <div class="menu" id="menu">
      <ul>
       <li><a href="index.html">Presentación</a></li>
-      <li><a href="europa.html">Europa</a></li>
-      <li><a href="asia.html">Asia</a></li>
-      <li><a href="america.html">América</a></li>
-      <li><a href="oceania.html">Oceanía</a></li>
-      <li><a href="africa.html">África</a></li>
-      <li><a href="antartida.html">Antartida</a></li>
+      <li><a href="europa/index.html">Europa</a></li>
+      <li><a href="asia/index.html">Asia</a></li>
+      <li><a href="america/index.html">América</a></li>
+      <li><a href="oceania/index.html">Oceanía</a></li>
+      <li><a href="africa/index.html">África</a></li>
+      <li><a href="antartida/index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
