acomodar inf y img

--- a/europa/sub/europaf.html
+++ b/europa/sub/europaf.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="../css/index.css">
+	  <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -38,13 +38,13 @@
 
   <div class="menu" id="menu">
     <ul>
-      <li><a href="../index.html">Presentación</a></li>
-      <li><a href="../europa.html">Europa</a></li>
-      <li><a href="../asia.html">Asia</a></li>
-      <li><a href="../america.html">América</a></li>
-      <li><a href="../oceania.html">Oceanía</a></li>
-      <li><a href="../africa.html">África</a></li>
-      <li><a href="../antartida.html">Antartida</a></li>
+      <li><a href="../../index.html">Presentación</a></li>
+      <li><a href="../index.html">Europa</a></li>
+      <li><a href="../../asia/index.html">Asia</a></li>
+      <li><a href="../../america/index.html">América</a></li>
+      <li><a href="../../oceania/index.html">Oceanía</a></li>
+      <li><a href="../../africa/index.html">África</a></li>
+      <li><a href="../../antartida/index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -54,7 +54,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('img/africa.jpg')">
+     style="background-image: url('../../img/fondosubeuropa.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -92,9 +92,80 @@
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
           <div class="flex flex-wrap justify-center">
             <div class="w-full px-4">
-              <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                TEXTO
-              </p>
+             <!-- SECCIÓN 1 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+       Tuber melanosporum (Trufa negra)
+
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+    La joya del bosque europeo crece principalmente en Francia, España e Italia, en suelos calizos bien drenados, bajo encinas y robles con los que establece micorrizas muy estrechas. Requiere inviernos fríos, veranos cálidos moderados y lluvias distribuidas de forma irregular.<br><br>
+ Su ecosistema ideal son bosques abiertos, secos, con vegetación baja. Su valor gastronómico es legendario: aroma profundo, terroso, con notas de cacao y humedad forestal. Es uno de los ingredientes más caros del mundo debido a su rareza y dificultad de recolección.<br><br>
+ Ecológicamente, ayuda a las raíces de los árboles a absorber agua y minerales, contribuyendo a la supervivencia de bosques mediterráneos en zonas áridas.
+</p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/1europatuber.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 2 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Amanita muscaria (Matamoscas)
+
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+      Icono visual del bosque europeo, con su sombrero rojo y puntos blancos. Se encuentra en bosques boreales, templados y alpinos de toda Europa, especialmente bajo abedules, pinos y abetos. Prefiere suelos ácidos, húmedos y sombreados.<br><br>
+ Ecológicamente, es vital: forma micorrizas que sostienen bosques enteros. Aunque tóxica, no suele ser mortal y ha tenido usos tradicionales ceremoniales en pueblos del norte de Europa. <br><br>No se usa con fines gastronómicos modernos debido a sus toxinas, pero su presencia indica bosques sanos y maduros.
+ En ecosistemas fríos y templados juega un rol crucial en la simbiosis entre hongos y árboles.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/2europaamanita.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 3 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">Boletus edulis (Hongo porcini o boleto)
+
+</h4>
+
+      <p class="leading-relaxed text-gray-700">
+      Ampliamente distribuido por bosques templados de Europa, desde Portugal hasta Rusia. Crece bajo pinos, robles, hayas y castaños. Sus condiciones ideales son suelos húmedos, estaciones frescas y abundancia de hojarasca.
+ Gastronómicamente, es uno de los hongos más apreciados: su carne blanca, firme y sabrosa lo convierte en un favorito de la cocina italiana, francesa y alemana.<br><br>
+ Ecológicamente, es un micorrícico esencial para mantener bosques europeos saludables, favoreciendo la absorción de nutrientes.
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/3europaboletus.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
 
              
             </div>
@@ -114,11 +185,11 @@
         <div class="text-sm text-blueGray-500 font-semibold py-1">
           Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
         <div class="absolute bottom-4 right-4 flex gap-3">
-  <a href="contacto.html"
+  <a href="../../contacto.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      CONTACTO
   </a>
-  <a href="formulario.html"
+  <a href="../../formulario.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      FORMULARIO
   </a>
@@ -128,6 +199,6 @@
   </div>
   </div>
 </footer>
-<script src="../js/nav.js"></script>
+<script src="../../js/nav.js"></script>
 </body>
 </html>
