--- a/america/sub/americaf.html
+++ b/america/sub/americaf.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="../css/index.css">
+	  <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -38,13 +38,13 @@
 
   <div class="menu" id="menu">
    <ul>
-      <li><a href="../index.html">Presentación</a></li>
-      <li><a href="../europa.html">Europa</a></li>
-      <li><a href="../asia.html">Asia</a></li>
-      <li><a href="../america.html">América</a></li>
-      <li><a href="../oceania.html">Oceanía</a></li>
-      <li><a href="../africa.html">África</a></li>
-      <li><a href="../antartida.html">Antartida</a></li>
+      <li><a href="../../index.html">Presentación</a></li>
+      <li><a href="../../europa/index.html">Europa</a></li>
+      <li><a href="../../asia/index.html">Asia</a></li>
+      <li><a href="../index.html">América</a></li>
+      <li><a href="../../oceania/index.html">Oceanía</a></li>
+      <li><a href="../../africa/index.html">África</a></li>
+      <li><a href="../../antartida/index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -54,7 +54,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('img/africa.jpg')">
+     style="background-image: url('../../img/fondosubamerica.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -84,18 +84,91 @@
      <div class="relative flex flex-col min-w-0 break-words bg-white 
                   w-full max-w-2xl mx-auto mb-6 shadow-xl rounded-lg -mt-64">
 
-        <div class="text-center mt-12">
+        
+
+         <div class="relative flex flex-col min-w-0 break-words bg-gray-100 
+     w-full max-w-2xl mx-auto mb-6 shadow-xl rounded-lg -mt-64">
+
+  <div class="text-center mt-12">
           <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700">
             NorteAmeriaca y su mundo FUNGI
           </h3>
         </div>
+  <div class="m-4 space-y-8">
 
-        <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
-          <div class="flex flex-wrap justify-center">
-            <div class="w-full px-4">
-              <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                TEXTO
-              </p>
+    <!-- SECCIÓN 1 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Amanita caesarea americana (Yema de huevo)
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+        Distribuida principalmente en México, Centroamérica y algunas regiones cálidas de Sudamérica, esta variedad americana de la icónica Amanita caesarea prospera en climas templados cálidos y subtropicales. Prefiere bosques de encinos, pinares abiertos o zonas mixtas donde el suelo sea ácido y bien drenado. Este hongo forma micorrizas con árboles, lo que significa que ayuda a las raíces a absorber minerales mientras recibe nutrientes a cambio. La fruta madura exhibe un color naranja brillante que contrasta con un pie amarillo, convirtiéndolo en una de las especies más hermosas del continente.<br><br>
+ Gastronómicamente, está considerada uno de los hongos más finos del mundo, con una textura suave y un sabor delicado. Ha sido consumida desde épocas prehispánicas y sigue siendo un símbolo culinario en varias regiones de México. Su presencia suele indicarse después de fuertes lluvias de verano, cuando las temperaturas oscilan entre cálidas y frescas. Ecológicamente, enriquece los suelos forestales y contribuye a la salud de encinares y bosques mixtos. Sin embargo, su parecido con otras Amanitas tóxicas hace que su recolección deba realizarse con extremo cuidado. Para las comunidades rurales, es un alimento festivo y también un recurso económico estacional.
+</p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/1americaamenita.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 2 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Morchella esculenta (Morchela americana)
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+       Se encuentra en América del Norte y regiones templadas de América del Sur, especialmente en Estados Unidos, Canadá, Chile y Argentina. Aparece en bosques templados, zonas quemadas recientemente, bordes de ríos y suelos ricos en ceniza. De hecho, muchas morchellas aparecen en mayor abundancia durante los primeros años posteriores a incendios forestales, aprovechando la riqueza mineral súbita y la reducción de competencia.
+ Ecológicamente, M. esculenta actúa como una especie pionera: coloniza suelos perturbados, ayuda a estabilizarlos y contribuye al retorno rápido de nutrientes. Su cuerpo esponjoso y su forma de panal es inconfundible.<br><br>
+ En la gastronomía, está entre los hongos más codiciados del continente. Su sabor es profundo, terroso y ligeramente dulce, ideal para salsas y platos de alta cocina. A nivel medicinal, posee compuestos antioxidantes y se cree que fortalece el sistema inmunológico. La morchela se ha integrado tanto a culturas indígenas como a cocinas modernas, donde se la considera un tesoro estacional que marca el renacer de los bosques tras el invierno o después del fuego.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/2americamorchella.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 3 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">Ustilago maydis (Huitlacoche)
+</h4>
+
+      <p class="leading-relaxed text-gray-700">
+       Presente sobre todo en México, Centroamérica y regiones agrícolas de Sudamérica, este hongo es un caso excepcional: un patógeno del maíz que, lejos de ser despreciado, es considerado un manjar tradicional y hoy reconocido como un superalimento. U. maydis infecta los granos de maíz creando agallas grisáceas y esponjosas que se desarrollan bajo condiciones de humedad media y temperaturas cálidas. Aparece con mayor frecuencia en campos donde el maíz no ha sido tratado con fungicidas.
+ En la cocina mexicana, el huitlacoche es conocido como “el caviar azteca”. Su sabor es complejo, entre umami, ahumado y ligeramente dulce. Se cocina en quesadillas, sopas, tamales y guisos. Desde el punto de vista medicinal, contiene aminoácidos esenciales, fibra, antioxidantes y compuestos bioactivos relacionados con la regulación metabólica.<br><br>
+ Ecológicamente, juega un papel inesperado: modifica genéticamente las unidades del maíz, permitiendo observar procesos esenciales en interacción planta-hongo. Es ampliamente estudiado en biología molecular por su comportamiento único y su capacidad para crear estructuras altamente diferenciadas a partir de tejido vegetal.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/3americaustilago.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+  </div>
 
               
             </div>
@@ -113,11 +186,11 @@
         <div class="text-sm text-blueGray-500 font-semibold py-1">
           Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
         <div class="absolute bottom-4 right-4 flex gap-3">
-  <a href="contacto.html"
+  <a href="../../contacto.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      CONTACTO
   </a>
-  <a href="formulario.html"
+  <a href="../../formulario.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      FORMULARIO
   </a>
@@ -127,6 +200,6 @@
   </div>
   </div>
 </footer>
-<script src="../js/nav.js"></script>
+<script src="../../js/nav.js"></script>
 </body>
 </html>
