--- a/antartida/sub/antartidaf.html
+++ b/antartida/sub/antartidaf.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="../css/index.css">
+	  <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -38,13 +38,13 @@
 
   <div class="menu" id="menu">
     <ul>
-      <li><a href="../index.html">Presentación</a></li>
-      <li><a href="../europa.html">Europa</a></li>
-      <li><a href="../asia.html">Asia</a></li>
-      <li><a href="../america.html">América</a></li>
-      <li><a href="../oceania.html">Oceanía</a></li>
-      <li><a href="../africa.html">África</a></li>
-      <li><a href="../antartida.html">Antartida</a></li>
+      <li><a href="../../index.html">Presentación</a></li>
+      <li><a href="../../europa/index.html">Europa</a></li>
+      <li><a href="../../asia/index.html">Asia</a></li>
+      <li><a href="../../america/index.html">América</a></li>
+      <li><a href="../../oceania/index.html">Oceanía</a></li>
+      <li><a href="../../africa/index.html">África</a></li>
+      <li><a href="../index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -54,7 +54,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('img/africa.jpg')">
+     style="background-image: url('../../img/fondosubantartida.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -86,7 +86,7 @@
 
         <div class="text-center mt-12">
           <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700">
-            Sudamerica y su mundo FUNGI
+           Antrarida y su mundo FUNGI
           </h3>
 
           
@@ -95,9 +95,76 @@
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
           <div class="flex flex-wrap justify-center">
             <div class="w-full px-4">
-              <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                TEXTO
-              </p>
+              <!-- SECCIÓN 1 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Cryomyces antarcticus
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+        Un hongo extremófilo que vive incrustado en rocas del desierto polar antártico. Soporta frío extremo, alta radiación UV y casi ausencia de agua. Prefiere grietas de rocas oscuras donde la nieve se derrite mínimamente. <br><br>
+ Ecológicamente, es una prueba viviente de resistencia, y su existencia sirve para estudios astrobiológicos. No tiene usos gastronómicos ni medicinales tradicionales.
+</p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/1antartidacryomyces.jpg"
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 2 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Pseudogymnoascus pannorum
+
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+      Aparece en suelos helados, cuevas y zonas costeras antárticas. Sobrevive a temperaturas bajo cero y períodos prolongados sin nutrientes.<br><br>
+ Actúa como descomponedor de restos orgánicos en un ecosistema donde casi nada se degrada rápido. Sus enzimas son estudiadas por su potencial biotecnológico.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/2antartidapseudogy.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 3 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">Phialophora fastigiata
+</h4>
+
+      <p class="leading-relaxed text-gray-700">
+      Presente en zonas húmedas costeras de la Antártida, creciendo sobre madera flotante, suelos fríos y restos de vegetación arrastrada por corrientes oceánicas.<br><br>
+ Contribuye a procesos de descomposición lenta pero crucial en un ambiente donde la materia orgánica escasea. Se investiga por su capacidad de producir compuestos resistentes al frío.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/3antartidaphialophora.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
             </div>
           </div>
         </div>
@@ -115,11 +182,11 @@
         <div class="text-sm text-blueGray-500 font-semibold py-1">
           Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
         <div class="absolute bottom-4 right-4 flex gap-3">
-  <a href="contacto.html"
+  <a href="../../contacto.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      CONTACTO
   </a>
-  <a href="formulario.html"
+  <a href="../../formulario.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      FORMULARIO
   </a>
@@ -129,6 +196,6 @@
   </div>
   </div>
 </footer>
-<script src="../js/nav.js"></script>
+<script src="../../js/nav.js"></script>
 </body>
 </html>
