--- a/asia/sub/asiaf.html
+++ b/asia/sub/asiaf.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="../css/index.css">
+	  <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -38,13 +38,13 @@
 
   <div class="menu" id="menu">
     <ul>
-      <li><a href="../index.html">Presentación</a></li>
-      <li><a href="../europa.html">Europa</a></li>
-      <li><a href="../asia.html">Asia</a></li>
-      <li><a href="../america.html">América</a></li>
-      <li><a href="../oceania.html">Oceanía</a></li>
-      <li><a href="../africa.html">África</a></li>
-      <li><a href="../antartida.html">Antartida</a></li>
+      <li><a href="../../index.html">Presentación</a></li>
+      <li><a href="../../europa/index.html">Europa</a></li>
+      <li><a href="../index.html">Asia</a></li>
+      <li><a href="../../america/index.html">América</a></li>
+      <li><a href="../../oceania/index.html">Oceanía</a></li>
+      <li><a href="../../africa/index.html">África</a></li>
+      <li><a href="../../antartida/index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -54,7 +54,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('img/africa.jpg')">
+     style="background-image: url('../../img/fondosubasia.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -94,9 +94,79 @@
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
           <div class="flex flex-wrap justify-center">
             <div class="w-full px-4">
-              <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                TEXTO
-              </p>
+              <!-- SECCIÓN 1 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+       Ganoderma lucidum (Reishi)
+
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+       El hongo medicinal más famoso del mundo prospera en bosques templados y subtropicales de China, Japón, Corea, Vietnam y el sudeste asiático. Crece sobre troncos viejos, raíces expuestas y madera dura en descomposición, especialmente en ambientes húmedos y sombreados. Sus cuerpos fructíferos brillantes, de color rojo lacado, parecen esculturas naturales.
+ Durante milenios, ha sido considerado un símbolo de longevidad, fuerza espiritual y salud. La medicina tradicional china lo utiliza para reducir la inflamación, fortalecer el sistema inmunológico y aumentar la vitalidad. Hoy, extractos de reishi se estudian científicamente por sus betaglucanos y triterpenos, que poseen efectos antioxidantes y moduladores del sistema inmune.<br><br>
+ Ecológicamente, G. lucidum es un descomponedor de árboles debilitados, actuando como parte del proceso natural de renovación del bosque. Prefiere climas con lluvias estacionales y temperaturas suaves, aunque puede sobrevivir en condiciones más frías si el tronco le ofrece suficiente protección.
+</p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/1asiaganoderma.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 2 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Matsutake (Tricholoma matsutake)
+
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+      El matsutake crece en Japón, China, Corea y algunas zonas montañosas del interior asiático. Es extremadamente exigente: solo aparece en bosques de pinos viejos y suelos muy específicos, ligeros, sin competencia de otros hongos, bien oxigenados y ligeramente ácidos. Debido a estas condiciones tan particulares, es uno de los hongos más raros y cotizados del mundo, alcanzando precios altísimos en mercados japoneses.
+ Su aroma es inconfundible: especiado, terroso y profundamente penetrante.<br><br> En gastronomía se considera un ingrediente de lujo, asociado al otoño y a celebraciones tradicionales. Ecológicamente, forma micorrizas que fortalecen los bosques de pinos, ayudando a mantener la salud del ecosistema. Sin embargo, su población ha disminuido por pérdida de hábitat y cambios en el uso del suelo, lo que convierte su recolección en un arte casi ritual.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/2asiamatsutake.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 3 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">Ophiocordyceps sinensis (Cordyceps tibetano)
+
+</h4>
+
+      <p class="leading-relaxed text-gray-700">
+      Este hongo-parásito crece en los Himalayas, a altitudes superiores a 3.000 metros, donde las temperaturas son frías y el aire es escaso. Infecta larvas de polillas subterráneas, consumiéndolas desde dentro hasta emerger como una pequeña vara marrón desde el suelo. Su ciclo de vida es tan extraordinario que ha capturado el interés de la biología moderna y la medicina tradicional.
+ En la medicina asiática, el cordyceps es un tónico para la energía vital, la resistencia física, la libido y la salud respiratoria. Su valor económico es altísimo, generando mercados enteros en Nepal, Tíbet y China.<br><br>
+ Ecológicamente, es parte de un delicado sistema de alta montaña, sensible a cambios climáticos y humanos. Su aparición requiere suelo frío, húmedo, poco intervenido y poblaciones sanas de insectos hospedadores.
+  </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/3asiaophiocordycep.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
 
               
             </div>
@@ -116,11 +186,11 @@
         <div class="text-sm text-blueGray-500 font-semibold py-1">
           Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
         <div class="absolute bottom-4 right-4 flex gap-3">
-  <a href="contacto.html"
+  <a href="../../contacto.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      CONTACTO
   </a>
-  <a href="formulario.html"
+  <a href="../../formulario.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      FORMULARIO
   </a>
@@ -130,6 +200,6 @@
   </div>
   </div>
 </footer>
-<script src="../js/nav.js"></script>
+<script src="../../js/nav.js"></script>
 </body>
 </html>
