--- a/contacto.html
+++ b/contacto.html
@@ -55,7 +55,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url(img/NorteAmeriaca.jpg)">
+     style="background-image: url(img/contacto.jpg)">
   <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
 </div>
     <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px" style="transform: translateZ(0px)">
