--- a/oceania/sub/oceaniaf.html
+++ b/oceania/sub/oceaniaf.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SITIO WEB ROISINBLIT</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	  <link rel="stylesheet" href="../css/index.css">
+	  <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
 <nav class="nav-container">
@@ -38,13 +38,13 @@
 
   <div class="menu" id="menu">
     <ul>
-      <li><a href="../index.html">Presentación</a></li>
-      <li><a href="../europa.html">Europa</a></li>
-      <li><a href="../asia.html">Asia</a></li>
-      <li><a href="../america.html">América</a></li>
-      <li><a href="../oceania.html">Oceanía</a></li>
-      <li><a href="../africa.html">África</a></li>
-      <li><a href="../antartida.html">Antartida</a></li>
+      <li><a href="../../index.html">Presentación</a></li>
+      <li><a href="../../europa/index.html">Europa</a></li>
+      <li><a href="../../asia/index.html">Asia</a></li>
+      <li><a href="../../america/index.html">América</a></li>
+      <li><a href="../index.html">Oceanía</a></li>
+      <li><a href="../../africa/index.html">África</a></li>
+      <li><a href="../../antartida/index.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -54,7 +54,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url('img/africa.jpg')">
+     style="background-image: url('../../img/fondosuboceania.jpg')">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -93,10 +93,79 @@
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
           <div class="flex flex-wrap justify-center">
             <div class="w-full px-4">
-              <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                TEXTO
-              </p>
+             <!-- SECCIÓN 1 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Clathrus archeri (Hongo pulpo)
 
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+       Originario de Australia y Tasmania, este hongo sorprende por su aspecto: brazos rojos y espinosos emergen como tentáculos desde un huevo gelatinoso. Crece en suelos húmedos, ricos en materia orgánica, en bosques eucaliptales y áreas de matorral.<br><br>
+ Desprende un olor fuerte que atrae insectos carroñeros, encargados de dispersar sus esporas. Aunque desagradable al olfato humano, es vital para el reciclaje de nutrientes.
+ No tiene uso gastronómico ni medicinal por su olor y consistencia, pero culturalmente fascina por su forma única.
+</p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/1oceaniaclathrus.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 2 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">
+        Leratiomyces ceres (Hongo rojo de madera)
+
+      </h4>
+
+      <p class="leading-relaxed text-gray-700">
+      Presente en Australia, Nueva Zelanda y Polinesia. Prefiere sustratos de madera en descomposición, jardines urbanos y parques donde haya restos de corteza y astillas húmedas.<br><br>
+ Su color rojo intenso lo hace inconfundible. Funciona como descomponedor primario, ayudando a transformar residuos vegetales en suelo fértil. Aunque no es tóxico mortal, no se consume. Su importancia radica en su abundancia y su capacidad para colonizar espacios alterados, regenerándolos.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/2oceanialeratiomyces.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
+
+    <!-- SECCIÓN 3 -->
+    <section class="p-5 rounded-lg bg-white text-black shadow-sm space-y-4">
+      <h4 class="text-xl font-semibold text-center">Austropaxillus infundibuliformis
+
+</h4>
+
+      <p class="leading-relaxed text-gray-700">
+      Endémico de Australia y Tasmania, este hongo micorrícico se asocia principalmente con eucaliptos. Crece en suelos ácidos, húmedos y ricos en hojarasca. Sus cuerpos fructíferos son grandes, en forma de embudo, con tonos marrones y crema.<br><br>
+ Ecológicamente, es vital para bosques australianos, ya que facilita la absorción de nutrientes en suelos pobres. Aunque no es un hongo de consumo común, investigaciones recientes sugieren posibles propiedades antimicrobianas.
+
+      </p>
+
+      <!-- IMAGEN 4x4 -->
+      <div class="flex justify-center">
+        <img 
+          src="../../img/3oceaniaaustropaxillus.jpg" 
+          alt="imagen del hongo" 
+          class="h-60 w-60 rounded-xl object-cover border border-gray-300 shadow"
+        />
+      </div>
+
+      <div class="border-b border-gray-300"></div>
+    </section>
               
             </div>
           </div>
@@ -115,11 +184,11 @@
         <div class="text-sm text-blueGray-500 font-semibold py-1">
           Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
         <div class="absolute bottom-4 right-4 flex gap-3">
-  <a href="contacto.html"
+  <a href="../../contacto.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      CONTACTO
   </a>
-  <a href="formulario.html"
+  <a href="../../formulario.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      FORMULARIO
   </a>
@@ -129,6 +198,6 @@
   </div>
   </div>
 </footer>
-<script src="../js/nav.js"></script>
+<script src="../../js/nav.js"></script>
 </body>
 </html>
