--- a/antartida/sub/antartidaf.html
+++ b/antartida/sub/antartidaf.html
@@ -45,6 +45,7 @@
       <li><a href="../../oceania/index.html">Oceanía</a></li>
       <li><a href="../../africa/index.html">África</a></li>
       <li><a href="../index.html">Antartida</a></li>
+      <li><a href="../../juego/index.html">Juego</a></li> 
     </ul>
   </div>
 </nav>
