--- a/antartida/index.html
+++ b/antartida/index.html
@@ -46,6 +46,7 @@
       <li><a href="../oceania/index.html">Oceanía</a></li>
       <li><a href="../africa/index.html">África</a></li>
       <li><a href="index.html">Antartida</a></li>
+      <li><a href="../juego/index.html">Juego</a></li> 
     </ul>
   </div>
 </nav>
