--- a/antartida/index.html
+++ b/antartida/index.html
@@ -196,6 +196,10 @@ No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestr
         </div>
 
         <div class="absolute bottom-4 right-4 flex gap-3">
+           <a href="../galeriaimg.html"
+     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
+     GALERIA
+  </a>
           <a href="../contacto.html"
              class="uppercase text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md rounded-full">
             CONTACTO
