--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li><a href="africa/index.html">África</a></li>
       <li><a href="antartida/index.html">Antartida</a></li>
      <li><a href="juego/index.html">Juego</a></li> 
-     <li><a href="galeriaimg.html">galerucha</a></li> 
+     
     </ul>
   </div>
 </nav>
@@ -100,6 +100,10 @@
         <div class="text-sm text-blueGray-500 font-semibold py-1">
           Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
         <div class="absolute bottom-4 right-4 flex gap-3">
+          <a href="galeriaimg.html"
+     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
+     GALERIA
+  </a>
   <a href="contacto.html"
      class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
      CONTACTO
