--- a/oceania/index.html
+++ b/oceania/index.html
@@ -210,6 +210,10 @@
           y puedes contactarnos desde los botones a la derecha
 
           <div class="absolute bottom-4 right-4 flex gap-3">
+             <a href="../galeriaimg.html"
+     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
+     GALERIA
+  </a>
             <a href="../contacto.html"
               class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
               CONTACTO
