--- a/africa/index.html
+++ b/africa/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SITIO WEB ROISINBLIT</title>
+	<title>AMBIENTE AFRICA</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" href="../css/index.css">
 </head>
@@ -82,7 +82,7 @@
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
           <div class="flex flex-wrap justify-center">
             <div class="w-full lg:w-9/12 px-4">
-
+<p class="text-black text-[35px] font-['Zilla_Slab']">Podran encontrar incorfmacion de los diversos ecosistemas que conforman los continentes en sus diversas areas,<br><em>¡CHUSMEA EL ACORDEON!</em></p>
               <!-- ACORDEÓN -->
               <div class="m-2 space-y-2">
 
