--- a/europa/index.html
+++ b/europa/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SITIO WEB ROISINBLIT</title>
+	<title>AMBIENTE DE EUROPA</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" href="../css/index.css">
 </head>
@@ -83,7 +83,7 @@
           <div class="flex flex-wrap justify-center">
             <div class="w-full lg:w-9/12 px-4">
               <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-
+<p class="text-black text-[35px] font-['Zilla_Slab']">Podran encontrar incorfmacion de los diversos ecosistemas que conforman los continentes en sus diversas areas,<br><em>¡CHUSMEA EL ACORDEON!</em></p>
                 <div class="m-2 space-y-2">
 
   <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="1">
