--- a/index.html
+++ b/index.html
@@ -74,17 +74,22 @@
             <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
               UN POCO DEL MUNDO FUNGI EN, ¡EL MUNDO!
             </h3>
-            <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
-              <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
-              Sudamerica
-            </div><!--este div sierve para la ubicacion-->
-            
+          
           </div>
           <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
             <div class="flex flex-wrap justify-center">
               <div class="w-full lg:w-9/12 px-4">
                 <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                  TEXTO
+                  El planeta es un mosaico vibrante de paisajes, climas y formas de vida. Desde selvas que respiran humedad ancestral hasta desiertos que esconden secretos bajo la arena, cada continente guarda un universo propio, moldeado por millones de años de evolución y por la delicada danza entre flora, fauna y ambiente. Este sitio web nace con el deseo de invitarte a recorrer ese gigantesco tapiz natural, explorando cómo se conectan el suelo, el clima, los animales, las plantas… y por supuesto, el fascinante mundo de los hongos.<br><br>
+Aquí vas a encontrar una descripción detallada de los ecosistemas de cada continente: sus regiones del norte, sur, este, oeste y centro; sus climas contrastantes; los territorios dominados por ciudades y aquellos rincones aún libres del rastro humano. Te sorprenderá cómo cada ambiente sostiene formas de vida únicas que se adaptan, resisten, coexisten y moldean el paisaje.<br><br>
+Pero este sitio no solo mira hacia lo que corre, vuela o florece. También se adentra en lo que se oculta bajo la hojarasca, lo que vive entre raíces y troncos, lo que transforma la materia en vida nueva. <em>El reino fungi</em>, una dimensión tan discreta como indispensable, ocupa un lugar central aquí. Exploraremos las especies de hongos más representativas de cada continente, sus hábitats, las condiciones que necesitan para prosperar y los roles —a veces invisibles— que desempeñan en la salud de los ecosistemas. Muchos de ellos poseen historias sorprendentes: desde hongos medicinales que la ciencia moderna recupera, hasta especies culinarias veneradas desde tiempos antiguos.<br><br>
+Este sitio está dirigido a quienes aman la naturaleza con genuina curiosidad: estudiantes, investigadores, aficionados del mundo fungi, exploradores de la ecología o simplemente almas inquietas que disfrutan descubriendo cómo funciona el planeta que habitamos. Buscamos informar, inspirar y despertar la admiración que merecen los bosques, mares, montañas, tundras y desiertos que aún resisten y laten bajo nuestros pies.<br><br>
+El fin de este proyecto es invitarte a observar el mundo con otros ojos: a reconocer el entramado silencioso de relaciones que sostiene cada ecosistema y la importancia de protegerlos. Cada sección pretende ser un puente entre la ciencia y la narrativa, entre el dato preciso y la belleza de lo que ese dato cuenta. Porque entender la vida es también una forma de preservarla.<br><br>
+Bienvenidx a este recorrido.
+ Un viaje por continentes, climas, especies y hongos que conviven en un equilibrio tan frágil como maravilloso.
+ Un viaje que, ojalá, te inspire a querer conocer más… y a cuidar más.
+
+
                 </p>
               </div>
             </div>
