--- a/galeriaimg.html
+++ b/galeriaimg.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SITIO WEB ROISINBLIT</title>
+	<title>GALERIA SITIO WEB </title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	  <link rel="stylesheet" href="css/index.css">
 </head>
@@ -71,11 +71,11 @@
        
           <div class="text-center mt-12">
             <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
-              UN POCO DEL MUNDO FUNGI EN, ¡EL MUNDO!
+             GALERIA DE IMAGENES
             </h3>
             <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
               <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
-              Sudamerica
+              EL MUNDO
             </div><!--este div sierve para la ubicacion-->
             
           </div>
