--- a/juego/index.html
+++ b/juego/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SITIO WEB ROISINBLIT</title>
+	<title>JUEGO DEL SITIO WEB FUNGI</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	  <link rel="stylesheet" href="../css/index.css">
       <link rel="stylesheet" href="../css/juego.css">
