--- a/antartida/index.html
+++ b/antartida/index.html
@@ -170,7 +170,7 @@ No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestr
 
               <!-- BOTÓN — AHORA DEBAJO Y CENTRADO -->
               <div class="text-center mt-6">
-  <a href="sub/antartidaf.html" class="btn-hongos">
+  <a href="antartidaf.html" class="btn-hongos">
     Ver Hongos
   </a>
 </div>
@@ -184,34 +184,36 @@ No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestr
   </section>
 </main>
 
-<!-- FOOTER -->
 <footer class="relative bg-blueGray-200 pt-8 pb-6 mt-8">
   <div class="container mx-auto px-4">
-    <div class="flex flex-wrap items-center md:justify-between justify-center">
-      <div class="w-full md:w-6/12 px-4 mx-auto text-center">
-        <div class="text-sm text-blueGray-500 font-semibold py-1">
-          Hecho por
-          <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">Juanita</a>,
-          y puedes contactarnos desde los botones a la derecha
-        </div>
 
-        <div class="absolute bottom-4 right-4 flex gap-3">
-           <a href="../galeriaimg.html"
-     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
-     GALERIA
-  </a>
-          <a href="../contacto.html"
-             class="uppercase text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md rounded-full">
-            CONTACTO
-          </a>
-          <a href="../formulario.html"
-             class="uppercase text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md rounded-full">
-            FORMULARIO
-          </a>
-        </div>
+    <div class="flex flex-col md:flex-row md:justify-between items-center relative">
 
+      <!-- Texto -->
+      <div class="text-center md:text-left mb-4 md:mb-0">
+        <p class="text-sm text-blueGray-500 font-semibold">
+          Hecho por 
+          <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">
+            Juanita
+          </a>
+          — puedes contactarnos desde los botones.
+        </p>
       </div>
+
+      <!-- Botones -->
+      <div class="flex gap-3 mt-4 md:mt-0 md:absolute md:right-4 md:bottom-4">
+        <a href="../galeriaimg.html"
+           class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">GALERIA</a>
+
+        <a href="../contacto.html"
+           class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">CONTACTO</a>
+
+        <a href="../formulario.html"
+           class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">FORMULARIO</a>
+      </div>
+
     </div>
+
   </div>
 </footer>
 
