--- a/galeriaimg.html
+++ b/galeriaimg.html
@@ -84,7 +84,7 @@
               <div class="w-full lg:w-9/12 px-4">
               <!-- GALERÍA DE 6 CARRUSELES -->
 
-<div class="grid grid-cols-3 gap-8 mt-10 place-items-center">
+<div class="grid grid-cols-3 gap-8 mt-10 place-items-center" id="galeria-carruseles">
 
   <div class="text-center w-full flex flex-col items-center">
     <img id="carrusel-img" class="h-48 w-48 rounded-xl shadow hover-sound" />
@@ -140,23 +140,32 @@
     </main>
     <footer class="relative bg-blueGray-200 pt-8 pb-6 mt-8">
   <div class="container mx-auto px-4">
-    <div class="flex flex-wrap items-center md:justify-between justify-center">
-      <div class="w-full md:w-6/12 px-4 mx-auto text-center">
-        <div class="text-sm text-blueGray-500 font-semibold py-1">
-          Hecho por<a href="mailto:juanaroibossio@gmail.com" class="text-blueGray-500 hover:text-gray-800" target="_blank">Juanita</a>,y puedes contactarnos desde los botones a la derecha
-        <div class="absolute bottom-4 right-4 flex gap-3">
-  <a href="contacto.html"
-     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
-     CONTACTO
-  </a>
-  <a href="formulario.html"
-     class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] rounded-full">
-     FORMULARIO
-  </a>
-        </div>
-        </div><!--AGREGAR BOTONES AL COSTADO IZQUIERDO PARA CONTACTO Y FORMULARIO-->
+
+    <div class="flex flex-col md:flex-row md:justify-between items-center relative">
+
+      <!-- Texto -->
+      <div class="text-center md:text-left mb-4 md:mb-0">
+        <p class="text-sm text-blueGray-500 font-semibold">
+          Hecho por 
+          <a href="mailto:juanaroibossio@gmail.com" class="hover:text-gray-800">
+            Juanita
+          </a>
+          — puedes contactarnos desde los botones.
+        </p>
+      </div>
+
+      <!-- Botones -->
+      <div class="flex gap-3 mt-4 md:mt-0 md:absolute md:right-4 md:bottom-4">
+        
+        <a href="contacto.html"
+           class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">CONTACTO</a>
+
+        <a href="formulario.html"
+           class="align-middle select-none font-sans font-bold text-center uppercase transition-all text-xs py-3 px-6 bg-gradient-to-tr from-gray-900 to-gray-800 text-white shadow-md hover:shadow-lg rounded-full">FORMULARIO</a>
+      </div>
+
     </div>
-  </div>
+
   </div>
 </footer>
 <audio id="hover-sound" src="sonido/magic.mp3"></audio>
